First real commit

--- a/src/App.css
+++ b/src/App.css
@@ -15,24 +15,129 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+/*   display: flex;
+  flex-direction: column; */
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 10px;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+#board {
+  margin: 40px auto; 
+  text-align: center; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.square {
+  padding: 10px;
+  display: inline-block;
+  width: 3em;
+  text-align: center;
+  border: 1px solid black;
+  font-size: 1.5em;
+  background: none;
+  cursor: pointer;
+  transition: border 0.25s, padding 0.25s;
+}
+
+.square.valid {
+  padding: 6px;
+  border: 5px dashed green;
+}
+
+.square.active {
+  position: relative;
+}
+
+.square.active.o::after {
+  content: "O";
+  position: absolute;
+  top: 0%;
+  right: 25%;
+  font-size: 2em;
+  color:red;
+  font-weight:bold;
+}
+
+.square.active.x::after {
+  content: "✕";
+  position: absolute;
+  top: 0%;
+  right: 25%;
+  font-size: 2em;
+  color: blue;
+  font-weight:bold;
+}
+
+.square.winner {
+  background-color: yellow;
+}
+
+.square.inactive {
+  color: grey;
+  border: 1px solid darkgrey;
+  padding: 10px;
+  cursor: default;
+}
+
+.square.inactive.x::after, .square.inactive.o::after {
+  color: grey;
+}
+
+button.playAgain {
+  font-size: 1.25em;
+  cursor: pointer;
+  margin: 10px;
+}
+
+#moveBlock {
+  text-align: center;
+}
+
+#moveStatus {
+  padding: 10px;
+  font-size: 1.5em;
+}
+
+.moveButton {
+  font-size: 1.5em;
+  margin: 5px;
+  cursor: pointer;
+  transition: background-color 0.5s, color 0.25s;
+}
+
+.moveButton.active {
+  background-color: #282c34;
+  color: white;
+}
+
+.square::after {
+  transition: background-color 0.5s, color 0.5s;
+}
+
+#moveError {
+  margin: 0px;
+  height: 0px;
+  transition: height 0.5s, margin 0.5s;
+  background-color: #be4f4f;
+}
+
+#moveError.active {
+  margin-bottom: 5px;
+  height: 1em;
+  padding: 5px;
+  color: white;
+  font-weight: bold;
+  transition: height 0.5s, margin 0.5s;
+}
+
+#movesSum {
+  height: 1em;
+  font-size: 1.2em;
+}
+
+.moveInstructions {
+  color: #555;
 }
