--- a/src/App.css
+++ b/src/App.css
@@ -35,16 +35,28 @@
   display: inline-block;
   width: 3em;
   text-align: center;
-  border: 1px solid black;
+  border: 0;
+  box-shadow: rgb(97, 92, 133) 2px 2px 3px;
+  margin: 3px;
   font-size: 1.5em;
-  background: none;
+  background:rgba(255, 255, 255, 0.5);
   cursor: pointer;
   transition: border 0.25s, padding 0.25s;
+  color: #222;
+}
+
+.square:hover {
+  background: rgba(255, 255, 255, 0.8);
+}
+
+.square:active {
+  background: rgba(255, 255, 255, 0.7);
 }
 
 .square.valid {
   padding: 6px;
   border: 5px dashed green;
+  color: #000;
 }
 
 .square.active {
@@ -140,4 +152,13 @@ button.playAgain {
 
 .moveInstructions {
   color: #555;
+}
+
+button {
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+  background-color: #0e0afd;
+  background-image: radial-gradient(circle, #eafdff 0%, #bbd5f1 70%, #9db6e4 100%);
 }
