--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@
   margin-top: 10px;
   padding: 4px;
   height: 2em;
+  line-height:2em;
   background-color:rgba(255, 255, 0, 50%);
 }
 
@@ -202,6 +203,7 @@ button.playAgain:hover {
   transition: background-color 0.5s;
   display: block;
   height: 2em;
+  line-height: 2em;
 }
 
 #moveInstructions.highlight {
