--- a/src/App.css
+++ b/src/App.css
@@ -46,13 +46,38 @@
 #boardInstructions.active {
   margin-top: 10px;
   padding: 4px;
-  height:auto;
-  min-height: 2em;
+  height:1.5em;
+  line-height:1.5em;
   background-color:rgba(255, 255, 0, 50%);
 }
 
 #boardInstructions.hidden {
   opacity: 0;
+  height: 0;
+}
+
+#boardInstructions button {
+  background: none;
+  color: blue;
+  border: 0;
+}
+
+ul.instructions {
+  max-width: 40em;
+  text-align: left;
+  margin: auto;
+  font-size: 1.1em;
+}
+
+@media only screen and (max-width: 700px) {
+  #boardInstructions {
+    line-height: auto;
+    height: auto;
+  }
+
+  ul.instructions {
+    max-width: 95%;
+  }
 }
 
 .square {
@@ -106,6 +131,10 @@
   font-weight:bold;
 }
 
+.currPlayer.O {
+  color: rgb(233, 23, 23);
+}
+
 .square.active.x::after {
   content: "✕";
   position: absolute;
@@ -114,6 +143,10 @@
   font-size: 2.5em;
   color: rgb(26, 26, 224);
   font-weight:bold;
+}
+
+.currPlayer.X {
+  color: rgb(26, 26, 224);
 }
 
 .square.winner {
@@ -210,10 +243,17 @@ button.playAgain:hover {
   transition: background-color 0.5s;
   display: block;
   height: auto;
+  line-height:1.5em;
 }
 
 #moveInstructions.highlight {
   background-color:rgba(255, 255, 0, 50%);
+}
+
+@media only screen and (max-width: 700px) {
+  #moveInstructions {
+    line-height: auto;
+  }
 }
 
 button {
