--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@ ul.instructions {
 
 .boardRow:nth-child(even) .square:nth-child(odd),
 .boardRow:nth-child(odd) .square:nth-child(even) {
-  background:rgb(239, 226, 46);
+  background:rgb(239, 167, 22);
   font-weight: bold;
 }
 
@@ -269,19 +269,17 @@ button.playAgain:hover {
 }
 
 #movesResult {
-  height: 1em;
+  height: 1.2em;
   font-size: 1.2em;
   margin: 5px auto;
   display: inline-block;
   background: rgba(255, 255, 255, 50%);
   padding: 7px;
+  transition: all 0.5s;
 }
 
 #movesResult.hidden {
   background: none;
-  height: 0;
-  padding: 0;
-  margin: 0;
 }
 
 
@@ -334,9 +332,30 @@ body {
   text-align: center;
 }
 
+.usernameInput {
+  padding: 5px;
+  margin-right: 5px;
+  height: 1.5em;
+  opacity: 0.8;
+}
+
+.usernameSubmit {
+  padding: 5px;
+  font-size: 1.2em;
+  font-family:'Arial Rounded MT Bold';
+}
+
 .startMsg {
   font-size: 1.5em;
   text-align: center;
+}
+
+.roomCode {
+  color: blue;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 10px;
+  font-weight: bold;
+  margin: 5px;
 }
 
 .mathsymbols {
