--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,7 @@ ul.instructions {
 }
 
 .square.winner {
-  background-color: yellow;
+  background-color: yellow !important;
 }
 
 .square.inactive {
@@ -363,6 +363,8 @@ body {
   color: #666;
   font-size: 1.2rem;
   margin-top: 10px;
+  display: inline-block;
+  margin-left: 10px;
 }
 
 .turn.yours {
@@ -370,7 +372,19 @@ body {
 }
 
 .turn.theirs {
-  color: red;
+  color: darkred;
+}
+
+.challengers {
+  font-size: 1.4em;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.username {
+  font-weight: bold;
+  font-variant: small-caps;
+
 }
 
 .mathsymbols {
