--- a/src/App.css
+++ b/src/App.css
@@ -40,29 +40,41 @@ body {
 #boardInstructions {
   display: block;
   margin: 0px;
-  height: 0;
   text-align: center;
   background-color: none;
   transition: margin 0.25s, height 0.25s, background-color 0.5s, opacity 0.5s;
+  overflow: hidden;
+  opacity: 1;
 }
 
 #boardInstructions.active {
   margin-top: 10px;
   padding: 10px;
-  height:1.5em;
   line-height:1.5em;
-  background-color:rgba(255, 255, 0, 50%);
 }
 
 #boardInstructions.hidden {
   opacity: 0;
-  height: 0;
+  padding: 0;
+  margin: 0;
 }
 
 #boardInstructions button {
   background: none;
   color: blue;
   border: 0;
+}
+
+#boardInstructionsContent {
+  transform: translateY(0);
+  transition: transform ease-out 0.5s;
+  background-color:rgba(255, 255, 0, 50%);
+  padding: 5px;
+}
+
+#boardInstructionsContent.hidden {
+  transform: translateY(-100%);
+  padding: 0;
 }
 
 #moveInstructions {
