Added debug, prettified

--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,12 @@
 }
 
 body {
-  font-family: 'Arial Rounded MT Bold';
+  font-family: "Arial Rounded MT Bold";
 }
 
 .App-header {
   background-color: #0a2353;
-/*   display: flex;
+  /*   display: flex;
   flex-direction: column; */
   align-items: center;
   justify-content: center;
@@ -33,8 +33,8 @@ body {
 }
 
 #board {
-  margin: 15px auto; 
-  text-align: center; 
+  margin: 15px auto;
+  text-align: center;
 }
 
 #boardInstructions {
@@ -50,7 +50,7 @@ body {
 #boardInstructions.active {
   margin-top: 10px;
   padding: 10px;
-  line-height:1.5em;
+  line-height: 1.5em;
 }
 
 #boardInstructions.hidden {
@@ -68,7 +68,7 @@ body {
 #boardInstructionsContent {
   transform: translateY(0);
   transition: transform ease-out 0.5s;
-  background-color:rgba(255, 255, 0, 50%);
+  background-color: rgba(255, 255, 0, 50%);
   padding: 5px;
 }
 
@@ -83,11 +83,11 @@ body {
   transition: background-color 0.5s;
   display: block;
   height: auto;
-  line-height:1.5em;
+  line-height: 1.5em;
 }
 
 #moveInstructions.highlight {
-  background-color:rgba(255, 255, 0, 50%);
+  background-color: rgba(255, 255, 0, 50%);
 }
 
 ul.instructions {
@@ -124,13 +124,13 @@ ul.instructions {
 
 .boardRow:nth-child(even) .square:nth-child(odd),
 .boardRow:nth-child(odd) .square:nth-child(even) {
-  background:rgb(239, 167, 22);
+  background: rgb(239, 167, 22);
   font-weight: bold;
 }
 
 @media only screen and (max-width: 700px) {
-  .square { 
-    font-size: 1.2em; 
+  .square {
+    font-size: 1.2em;
     width: 10vw;
   }
 }
@@ -160,8 +160,8 @@ ul.instructions {
   top: -25%;
   right: 20%;
   font-size: 2.5em;
-  color:rgb(233, 23, 23);
-  font-weight:bold;
+  color: rgb(233, 23, 23);
+  font-weight: bold;
 }
 
 .currPlayer.O {
@@ -175,7 +175,7 @@ ul.instructions {
   right: 20%;
   font-size: 2.5em;
   color: rgb(26, 26, 224);
-  font-weight:bold;
+  font-weight: bold;
 }
 
 .currPlayer.X {
@@ -193,7 +193,8 @@ ul.instructions {
   cursor: default;
 }
 
-.square.inactive.x::after, .square.inactive.o::after {
+.square.inactive.x::after,
+.square.inactive.o::after {
   color: grey;
 }
 
@@ -294,7 +295,6 @@ button.playAgain:hover {
   background: none;
 }
 
-
 @media only screen and (max-width: 700px) {
   #moveInstructions {
     line-height: auto;
@@ -302,12 +302,18 @@ button.playAgain:hover {
 }
 
 button {
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
   background-color: #eafdff;
-  background-image: radial-gradient(circle, #eafdff 0%, #bbd5f1 70%, #9db6e4 100%);
+  background-image: radial-gradient(
+    circle,
+    #eafdff 0%,
+    #bbd5f1 70%,
+    #9db6e4 100%
+  );
 }
 
 .currPlayer {
@@ -354,7 +360,7 @@ body {
 .usernameSubmit {
   padding: 5px;
   font-size: 1.2em;
-  font-family:'Arial Rounded MT Bold';
+  font-family: "Arial Rounded MT Bold";
 }
 
 .startMsg {
@@ -396,7 +402,6 @@ body {
 .username {
   font-weight: bold;
   font-variant: small-caps;
-
 }
 
 .mathsymbols {
@@ -408,7 +413,6 @@ body {
   font-size: 3em;
   font-family: Arial, sans-serif;
   text-shadow: 0 0 4px rgb(93, 93, 93);
-  
 }
 
 .mathsymbol.plus {
@@ -427,4 +431,119 @@ body {
   color: orange;
 }
 
-@-webkit-keyframes mathsymbols-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes mathsymbols-shake{0%,100%{-webkit-transform:translateX(0);transform:translateX(0)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}}@keyframes mathsymbols-fall{0%{top:-10%}100%{top:100%}}@keyframes mathsymbols-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.mathsymbol{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:mathsymbols-fall,mathsymbols-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:mathsymbols-fall,mathsymbols-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.mathsymbol:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.mathsymbol:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.mathsymbol:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.mathsymbol:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.mathsymbol:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.mathsymbol:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.mathsymbol:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.mathsymbol:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.mathsymbol:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.mathsymbol:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}.mathsymbol:nth-of-type(10){left:25%;-webkit-animation-delay:2s,0s;animation-delay:2s,0s}.mathsymbol:nth-of-type(11){left:65%;-webkit-animation-delay:4s,2.5s;animation-delay:4s,2.5s}
+@-webkit-keyframes mathsymbols-fall {
+  0% {
+    top: -10%;
+  }
+  100% {
+    top: 100%;
+  }
+}
+@-webkit-keyframes mathsymbols-shake {
+  0%,
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  50% {
+    -webkit-transform: translateX(80px);
+    transform: translateX(80px);
+  }
+}
+@keyframes mathsymbols-fall {
+  0% {
+    top: -10%;
+  }
+  100% {
+    top: 100%;
+  }
+}
+@keyframes mathsymbols-shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(80px);
+  }
+}
+.mathsymbol {
+  position: fixed;
+  top: -10%;
+  z-index: 9999;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+  -webkit-animation-name: mathsymbols-fall, mathsymbols-shake;
+  -webkit-animation-duration: 10s, 3s;
+  -webkit-animation-timing-function: linear, ease-in-out;
+  -webkit-animation-iteration-count: infinite, infinite;
+  -webkit-animation-play-state: running, running;
+  animation-name: mathsymbols-fall, mathsymbols-shake;
+  animation-duration: 10s, 3s;
+  animation-timing-function: linear, ease-in-out;
+  animation-iteration-count: infinite, infinite;
+  animation-play-state: running, running;
+}
+.mathsymbol:nth-of-type(0) {
+  left: 1%;
+  -webkit-animation-delay: 0s, 0s;
+  animation-delay: 0s, 0s;
+}
+.mathsymbol:nth-of-type(1) {
+  left: 10%;
+  -webkit-animation-delay: 1s, 1s;
+  animation-delay: 1s, 1s;
+}
+.mathsymbol:nth-of-type(2) {
+  left: 20%;
+  -webkit-animation-delay: 6s, 0.5s;
+  animation-delay: 6s, 0.5s;
+}
+.mathsymbol:nth-of-type(3) {
+  left: 30%;
+  -webkit-animation-delay: 4s, 2s;
+  animation-delay: 4s, 2s;
+}
+.mathsymbol:nth-of-type(4) {
+  left: 40%;
+  -webkit-animation-delay: 2s, 2s;
+  animation-delay: 2s, 2s;
+}
+.mathsymbol:nth-of-type(5) {
+  left: 50%;
+  -webkit-animation-delay: 8s, 3s;
+  animation-delay: 8s, 3s;
+}
+.mathsymbol:nth-of-type(6) {
+  left: 60%;
+  -webkit-animation-delay: 6s, 2s;
+  animation-delay: 6s, 2s;
+}
+.mathsymbol:nth-of-type(7) {
+  left: 70%;
+  -webkit-animation-delay: 2.5s, 1s;
+  animation-delay: 2.5s, 1s;
+}
+.mathsymbol:nth-of-type(8) {
+  left: 80%;
+  -webkit-animation-delay: 1s, 0s;
+  animation-delay: 1s, 0s;
+}
+.mathsymbol:nth-of-type(9) {
+  left: 90%;
+  -webkit-animation-delay: 3s, 1.5s;
+  animation-delay: 3s, 1.5s;
+}
+.mathsymbol:nth-of-type(10) {
+  left: 25%;
+  -webkit-animation-delay: 2s, 0s;
+  animation-delay: 2s, 0s;
+}
+.mathsymbol:nth-of-type(11) {
+  left: 65%;
+  -webkit-animation-delay: 4s, 2.5s;
+  animation-delay: 4s, 2.5s;
+}
